bugfix: timeline text slightly too large.

--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -636,6 +636,7 @@ div.subject-timeline
     max-height: 300px
     min-height: 150px
     overflow: auto
+    font-size: 1em
 
     li
       padding: .5em 0 0
